# mlb_predictor

./: Cargo.toml  lines.html  lines1.html
src/: grab_data_from_html.rs  main.rs  sqlite_storage.rs
