[package]
name = "mlb_predictor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
reqwest = "0.11.10"
scraper = "0.13.0"
table-extract = "0.2.2"
chrono = "0.4.19"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
